--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="./assets/css/style.css">
+
 <div class="container mt-3 text-center">
         <div class="row justify-content-center">
             <div class="col-md-8 col-12 content">
-                <h3>OMDB API EXAMPLE WITH JQUERY</h3>
+                <h3>Rotten Tamatoes</h3>
                 <div id="search">
                     <form>
                         <input type="text" class="search-input search border-padding" placeholder="Enter name of the movie">
