--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div class="container mt-3 text-center">
         <div class="row justify-content-center">
             <div class="col-md-8 col-12 content">
-                <h3>Rotten Tamatoes</h3>
+                <h3>Rotten Tomatoes</h3>
                 <div id="search">
                     <form>
                         <input type="text" class="search-input search border-padding" placeholder="Enter name of the movie">
