--- a/indexreplacement.html
+++ b/indexreplacement.html
@@ -37,7 +37,7 @@
                 placeholder="Search any Movie/Show">
             </div>
             <div id="search-container" class="control">
-              <button type="submit" class="button is-danger">Search</button>
+              <button type="submit" id="buscar" class="button is-danger">Search</button>
             </div>
           </div>
         </form>
@@ -51,7 +51,7 @@
 
 
 
-
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  
+        <script src="./scriptreplacement.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </body>
 </html>
