--- a/indexreplacement.html
+++ b/indexreplacement.html
@@ -30,6 +30,10 @@
         <div class="box">
           <form id="user-form" class="user-form">
           <h3 class="center subtitle is-size-3 has-text-weight-bold has-text-white font-beba">Search For Your Movie!</h3>
+          <div id="result-list" class="border-padding mb-3">
+            <div id="results"></div>
+            <div id="result-footer" class="pt-4 mt-2"><a href="#" id="show-more">SHOW MORE »</a></div>
+        </div>
           <div class="field has-addons is-justify-content-center">
             <div class="control">
               <!-- Search bar with autocomplete -->
