--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="./assets/css/reset.css">
 <link rel="stylesheet" href="./assets/css/style.css">
 
 <div class="container mt-3 text-center">
