adding head to HTML

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<!DOCTYPE html>
+<html lang="eng">
+ 
+<head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="./assets/css/style.css">
-
+</html>
 <div class="container mt-3 text-center">
         <div class="row justify-content-center">
             <div class="col-md-8 col-12 content">
-                <h3>Rotten Tamatoes</h3>
+                <h3>Rotten Tamahtoes</h3>
                 <div id="search">
                     <form>
                         <input type="text" class="search-input search border-padding" placeholder="Enter name of the movie">
