--- a/single-repo.html
+++ b/single-repo.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initital-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./assets/css/reset.css">
   <title>Expired Tomahtos</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -17,7 +21,8 @@
     <section class="section is-fullheight" id="test">
         <div class="columns is-flex is-vcentered is-centered is-fullheight">
             <div class="column" id="first-column">
-                Trailer
+                <h1>Trailer</h1>
+                <div id="player"></div>
                 </div>
                 <div class="column is-half" id="second-column">Synopsis:
                     <p class="bd-notification is-primary" id="plot"></p>
@@ -30,3 +35,4 @@
         
      </section>
      <script src="./assets/js/single-repo.js"></script>
+     <script src="./assets/js/youtube.js"></script>
