fixes requested by Blake

--- a/single-repo.html
+++ b/single-repo.html
@@ -34,5 +34,6 @@
           </div>
         
      </section>
+     <script src="./assets/js/style.js"></script>
      <script src="./assets/js/single-repo.js"></script>
      <script src="./assets/js/youtube.js"></script>
